...
        style={[notesStyles.container, { backgroundColor: colors.surface }]}
        edges={['bottom']}>
        <View style={notesStyles.content}>
          <View style={notesStyles.buttonContainer}>
            <TouchableOpacity
              accessible={true}
              accessibilityLabel="Add New Note, button"
              accessibilityRole="button"
              onPress={() => router.push('/notes/add' as any)}
              style={[
                notesStyles.addButton,
                { backgroundColor: colors.primary },
              ]}
...
