...
    switch (type) {
      case NotificationType.medication:
        return 'Medication';
      case NotificationType.message:
        return 'Message';
      case NotificationType.appointment:
        return 'Appointment';
      case NotificationType.healthReminder:
        return 'Health Reminder';
      case NotificationType.generalReminder:
        return 'General Reminder';
    }
  }
...
